--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 services:
   postgre_db:
     image: postgres
+    container_name: potgre_db
     ports:
       - "5433:5432"
     volumes:
@@ -10,6 +11,23 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_NAME}
-
+#  vizit_app:
+#    build:
+#      context: ./my_vizit
+#    container_name: vizit_app
+#    ports:
+#      - "5000:5000"
+#    depends_on:
+#      - postgre_db
+#    environment:
+#      SECRET_KEY: ${SECRET_KEY}
+#      DB_HOST: ${DB_HOST}
+#      DB_USER: ${DB_USER}
+#      DB_PASSWORD: ${DB_PASSWORD}
+#      DB_NAME: ${DB_NAME}
+#      DB_PORT: ${DB_PORT}
+#    volumes:
+#      - static_vizit:/app/staticfiles
 volumes:
   postgr_tom:
+  static_vizit:
